temp fix for stores on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -248,6 +248,9 @@ article.post {
         }
     }
     @include media-query($on-ipad) {
+    .store {
+        width: 100%;
+    }
      .city {
          display: none;
      }
